[package]
name = "rds-snapshot-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-kms = "0.24.0"
aws-sdk-rds = "0.24.0"
inquire = "0.6.0"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1.12"
